--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "@types/cli-progress": "^3.11.5",
     "@types/jsdom": "^21.1.6",
     "axios": "^1.6.7",
-    "chrome-cookies-secure": "^2.1.1",
+    "chrome-cookie": "^1.0.6",
+    "chrome-cookies-secure": "^2.0.0",
     "cli-progress": "^3.12.0",
     "console-log-colors": "^0.4.0",
     "docx": "^8.5.0",
@@ -13,7 +14,9 @@
     "get-audio-duration": "^4.0.1",
     "http": "^0.0.1-security",
     "jsdom": "^24.0.0",
+    "keytar": "^7.9.0",
     "mammoth": "^1.7.0",
+    "node-gyp": "^8.4.1",
     "pdf-parse": "^1.1.1",
     "pdf2json": "^3.0.5",
     "puppeteer": "^22.0.0",
